--- a/ManagerGUI/managerproj/src/Menu.css
+++ b/ManagerGUI/managerproj/src/Menu.css
@@ -116,12 +116,16 @@ h3{
     text-align: right;
 }
 .updateForm{
-    margin-top: 1rem;
-    text-align: right;
+    margin-top: 2rem;
+    text-align: center;
+    margin-bottom: 2rem;
 }
-
+.updateForm input{
+    width:10%;
+}
 .mid{
     text-align: center;
+    margin-top:2rem;
 }
 label{
     padding-left: 1rem;
@@ -135,4 +139,23 @@ input{
     margin-left:1rem;
     width:10vw; 
     margin-top:1vh;
+}
+.image{
+    text-align: center;
+    margin-top: 10rem;
+}
+.image img{
+    width:30%;
+    height:30%;
+}
+
+.recipetable{
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.salesReport{
+    margin-top: 10%;
+    margin-left:15%;
+    margin-right:15%;
 }
