--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -74,3 +74,11 @@ $theme-colors: (
     right: 16px;
 
 }
+
+.header{
+    background-color: #00704A;
+    text-align: center;
+}
+
+
+@import "~bootstrap/scss/bootstrap"
