Testing new branch

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -75,5 +75,9 @@ $theme-colors: (
 
 }
 
+.header{
+    background-color: #00704A;
+    text-align: center;
+}
 
 @import "~bootstrap/scss/bootstrap"
