--- a/frontend/src/components/Popup.css
+++ b/frontend/src/components/Popup.css
@@ -3,9 +3,9 @@ popup {
     top: 0;
     left: 0;
     width: 100%;
-    height: 150vh;
+    height: 100vh;
     background-color: #eac784;
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,6 +16,8 @@ popup {
     padding: 32px;
     width: 100%;
     max-width: 640px;
+    max-height: 50vh;
+    border-radius: 25px;
     background-color: #eac784;
 }
 
