--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -104,4 +104,30 @@ $theme-colors: (
     box-shadow: 5px 5px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
+.icon-shape {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    vertical-align: middle;
+
+}
+
+.icon-sm {
+    width: 2rem;
+    height: 2rem;
+
+
+
+}
+
+.input-group {
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    width: 20px;
+
+}
+
+
+
 @import "~bootstrap/scss/bootstrap"
