--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -128,6 +128,9 @@ $theme-colors: (
 
 }
 
-
+.header{
+    background-color: #00704A;
+    text-align: center;
+}
 
 @import "~bootstrap/scss/bootstrap"
