--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -20,10 +20,10 @@ $theme-colors: (
     width: 100%;
     max-width: 450px;
     padding: 50px;
-    margin-left: 25vw;
-    margin-right: 15vw;
+    border-radius: 10px;
+
     padding-top: 100px;
-    margin-bottom: 40px;
+    margin: auto;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0.05);
 
     h3 {
@@ -128,9 +128,19 @@ $theme-colors: (
 
 }
 
-.header{
+.header {
     background-color: #00704A;
     text-align: center;
 }
+
+/*google translate Dropdown */
+
+.goog-te-gadget-simple {
+
+    border-radius: 25px;
+
+    font-size: 20px !important;
+}
+
 
 @import "~bootstrap/scss/bootstrap"
