--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -2,8 +2,6 @@ $theme-colors: (
     "primary": #00704A,
 
     "secondary": #eac784,
-
-
 );
 
 
@@ -30,7 +28,6 @@ $theme-colors: (
         font-weight: 500;
         margin-bottom: 50px
     }
-
 }
 
 .login-form {
@@ -116,16 +113,12 @@ $theme-colors: (
 .icon-sm {
     width: 2rem;
     height: 2rem;
-
-
-
 }
 
 .input-group {
     background-color: #FFFFFF;
     border-radius: 20px;
     width: 20px;
-
 }
 
 .header {
@@ -134,13 +127,13 @@ $theme-colors: (
 }
 
 /*google translate Dropdown */
-
 .goog-te-gadget-simple {
-
     border-radius: 25px;
-
     font-size: 20px !important;
 }
 
+main{
+    padding-bottom:10rem;
+}
 
 @import "~bootstrap/scss/bootstrap"
