new pages created and changes made to manager

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -288,18 +288,10 @@ main{
 }
 
 .footerImage{
-    margin-top: 20px;
     margin-right: 5px;
     margin-left:5px;
-    height:30px;
-    width:30px;
-}
-.footerImage:hover{
-    margin-top: 20px;
-    margin-right: 5px;
-    margin-left:5px;
-    height:35px;
-    width:35px;
+    height:5vh;
+    width:5vh;
 }
 
 @import "~bootstrap/scss/bootstrap"
