Fully functional submit and cancel buttons, able to get and store customer's name, and fixed design issues

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -196,10 +196,11 @@ main{
     padding: 0;
     box-sizing: border-box;
     position: fixed;
-    top: 145px;
+    top: 175px;
     left: 0px;
     width: 15%;
-    height: 80%;
+    height: 70%;
+    overflow-y: scroll;
     background-color: #00704A;
 }
 
@@ -222,8 +223,7 @@ main{
     left: -32px;
     width: 15vw;
     list-style: none;
-    margin-top: 14px;
-    margin-bottom: 14px;
+    margin-top: 10px;
     padding: 22px;
     border-bottom: 1px solid #013f2a;
     border-top: 1px solid  #003d29;
@@ -242,17 +242,18 @@ main{
 .navbarArea{
     color: rgba(0,0,0,0);
     float: left;
-    width: 15%;
+    width: 12%;
+    position: sticky;
 }
 
 .menuItems{
-    width: 56%;
+    width: 53%;
     float: left;
 }
 
 .menuItems button {
     height: 5.5vw;
-    width: 16vw;
+    width: 14vw;
     margin-top: 5px;
     margin-left: 0px;
     margin-right: 0px;
@@ -261,14 +262,16 @@ main{
 
 .orderSummary{
     float: left;
-    width: 24%;
-    margin-left: 1%;
+    position: sticky;
+    width: 34%;
 }
 
 .orderSummary table{
+    overflow-x: scroll;
     overflow-y:scroll;
     display:block;
     height: 300px;
+    width: 100%;
 }
 
 .orderSummary thead, td {
