--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -23,7 +23,7 @@ $theme-colors: (
     padding-top: 100px;
     margin: auto;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0.05);
-
+    margin-bottom: -20vh;
     h3 {
         font-weight: 500;
         margin-bottom: 50px
