Added error checking code

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -278,6 +278,12 @@ main{
     text-align: center;
 }
 
+.orderSummary #customerName {
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+
 .submitButton {
     float: left;
     margin-bottom: 30px;
